# barzer

./: .gitignore  .rlcomplete  CMakeLists.txt  LICENSE  README.markdown  README.md  ay_shell.cpp  barz_server_response.cpp  barz_server_response.h  barzel.xsd  barzel_rules.xml  barzer.cpp  barzer.mk  barzer32.mk  barzer_autocomplete.cpp  barzer_autocomplete.h  barzer_barz.cpp  barzer_barz.h  barzer_barzxml.cpp  barzer_barzxml.h  barzer_basic_types.cpp  barzer_basic_types.h  barzer_basic_types_range.cpp  barzer_basic_types_range.h  barzer_beni.cpp  barzer_beni.h  barzer_beni_ngram_storage.h  barzer_beni_storage.cpp  barzer_beni_storage.h  barzer_bson.h  barzer_bzspell.cpp  barzer_bzspell.h  barzer_client.py  barzer_client_setup.py  barzer_config.h  barzer_date_util.cpp  barzer_date_util.h  barzer_datelib.cpp  barzer_datelib.h  barzer_dict.cpp  (+198 more)
algorithms/: tree_permute.cpp
arch/: barzer_arch.h  barzer_windows.h
assignment/: README  engine_weekly.txt  polter_assignment.txt  sgt_assignment.txt  vadim_asignment.txt  yanis_assignment.txt
autotester/: BarzerClient.py  CMakeLists.txt  autotest.py  autotester.cpp  autotester.h  barzer_at_autotester.cpp  barzer_at_autotester.h  barzer_at_comparators.cpp  barzer_at_comparators.h  cmpmain.cpp  comparators.cpp  comparators.h  queries  sample.xml  test.py
ay/: CMakeLists.txt  ay_bitflags.h  ay_boost.h  ay_char.h  ay_char_trie_test.cpp  ay_choose.h  ay_cmdproc.cpp  ay_cmdproc.h  ay_debug.h  ay_evovec.h  ay_fileiter.h  ay_filesystem.h  ay_geo.cpp  ay_geo.h  ay_headers.h  ay_index.h  ay_keymaps.cpp  ay_keymaps.h  ay_langutil.h  ay_levenshtein.h  ay_linkage.h  ay_logger.cpp  ay_logger.h  ay_mapiter.h  ay_math.h  ay_ngrams.cpp  ay_ngrams.h  ay_parse.h  ay_pool_with_id.h  ay_python.h  ay_raii.h  ay_ro_wstring.h  ay_ru_chars.h  ay_schrod.h  ay_sets.h  ay_shell.cpp  ay_shell.h  ay_slogrovector.h  ay_snowball.cpp  ay_snowball.h  (+35 more)
ay/tables/: Convert.hs  decompositions.cpp  l2u.cpp  u2l.cpp  ucat.cpp
batch/: barzer_batch_processor.cpp  barzer_batch_processor.h
bson/: bsoncompare_mongodb.cpp  bsontest.cpp  ebson11.h  ebson11_string_idx.h  stringnum.h
bsontest/: 01.xml  02.xml  03.xml  04.xml  05.xml  06.xml  07.xml  08.xml  09.xml  10.xml  11.xml  12.xml  Gentest.hs
bug/: crash.xml
bzspell/: stripxml.ksh
cmake/: FindHunspell.cmake
data/: autoc_testing.py  barzel_dates.xml  barzel_fluff.xml  barzel_prices.xml  barzel_ru_dates.xml  cntry.xml  crawler.py  dtaan2xml.awk  ngraman.py  server_response.xsd  simple_entgen.py  wordstat.py
data/UnitConverter/: script.py  this should be added manually  this_should_be_added_manually
data/UnitConverter/data/: area  length  mass  speed  time  volume
data/bbc/: shows.xml
data/configs/: astor.xml  bbc.xml  config_ja.xml  config_spell.xml  config_tmpl.xml  default.xml  empty.xml  test.xml  yanis.xml
data/entities/: time_ent.xml
data/language/: english.txt  french.txt  spanish.txt
data/rules/: barzel_dates.xml  barzel_fluff.xml  barzel_prices.xml  barzel_ru_dates.xml  barzel_ru_prices.xml  generic.xml  ja.xml  proctest.xml  test-rules.xml  vintage.xml
data/script/: ngrams.awk  normalize.ksh
data/spell/: english_words.txt  extra.txt
data/util/: umlaut.cpp
dev/: barzel.xml  barzel_date_newrules.xml  config_config.xml  config_iss.xml  config_meaning.xml  config_spell.xml  config_svyaznoy.xml  config_topics.xml  config_user.xml  config_vine.xml  iss_defrules.xml  moo.xml  topics.xml  usercfg_1.xml  usercfg_2.xml
distro/: shareesah.ksh  shareesah.pack.txt
entextract/: Main.hs  runner.py  ushc_phrases.txt
entextract/cpp/: main.cpp
function/: README  barzer_el_function_date.cpp  barzer_el_function_template.cpp  barzer_el_function_topic.cpp
hub/: Makefile  bh_expr.cpp  bh_expr.h  c.go  glue.c  glue.h  json.go  main.go  start.py  test.cpp  types.go  xml.go
hunspell/: brz_hunspell.py  telnet.py
hunspell/pyhunspell/: PKG-INFO  setup.py
kytea/: CMakeLists.txt
kytea/src/api/: api-test.cpp  stem-test.cpp
kytea/src/include/: Makefile.in
kytea/src/include/kytea/: config.h.in
kytea/src/lib/: kytea-util.cpp
kytea/src/lib/liblinear/: CMakeLists.txt
kytea/src/lib/liblinear/blas/: CMakeLists.txt
lg_en/: barzer_en_date_util.cpp  barzer_en_date_util.h  barzer_en_lex.cpp  barzer_en_lex.h
lg_ja/: barzer_ja_lex.cpp  barzer_ja_lex.h
lg_ru/: barzer_ru_date_util.cpp  barzer_ru_date_util.h  barzer_ru_lex.cpp  barzer_ru_lex.h  barzer_ru_stemmer.cpp  barzer_ru_stemmer.h  russ_char_test.cpp
nsis/: mainscript.nsi
osmgen/: main.cpp
proxy/: barzer_proxy.conf  barzer_proxy.ini  barzer_proxy.py  render.py
snowball/: CMakeLists.txt  frenchdata.txt  snowtest.cpp
spell/: hunspell_test.cpp
test/: Gemfile  Rakefile  barzer_httpq.py  barzerlibtest.cpp  helper.rb  test_expected_results.rb  vartest_simple.xml
test/data/: expected_results.xml  queries.txt
util/: CMakeLists.txt  barzer-init.d-DO-NOT-USE.sh  barzer-init.d.rb  barzer-init.d.sh  barzer-service-restart.rb  bbc_scrape.py  dtaan2xml.ksh  dtapipeline.ksh  mkxml.py  pybarzer.cpp  pybarzer.h  python_util.cpp  rebuild  rebuild.ksh  test-server.bash  umlaut.cpp  umlaut.h  util.mk
zurch/: zurch_loader_longxml.cpp  zurch_loader_longxml.h
zurch_pipeline/: keyword_generator.py
